--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,48 +1,56 @@
-name: CI/CD Pipeline
+name: Solana Indexer CI/CD
 
 on:
   pull_request:
-    types:
-      - closed
+    types: [closed]
     branches:
       - dev
-      - new-prod-vault
+      - master
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.ref_name == 'new-prod-vault' && 'solmate' || 'dev' }}
+    environment: ${{ github.ref_name == 'master' && 'prod' || 'dev' }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Extract latest Git tag
+        id: git_tag
+        run: echo "tag=$(git describe --tags --abbrev=0)" >> "$GITHUB_OUTPUT"
+
       - name: Docker login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build Docker image
+      - name: Set image tag based on branch
+        id: image_tag
         run: |
-          docker build \
-            --build-arg NODE_OPTIONS="--max-old-space-size=2048" \
-            --build-arg COINGECKO_API_KEY=${{ secrets.COINGECKO_API_KEY }} \
-            --build-arg NEXT_PUBLIC_MOON_PAY_KEY=${{ secrets.NEXT_PUBLIC_MOON_PAY_KEY }} \
-            --build-arg NEXT_PUBLIC_WALLET_CONNECT_PJ_ID=${{ secrets.NEXT_PUBLIC_WALLET_CONNECT_PJ_ID }} \
-            --build-arg NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=${{ secrets.NEXT_PUBLIC_GOOGLE_ANALYTICS_ID }} \
-            --build-arg PROD_RPC_KEY_HELIUS=${{ secrets.PROD_RPC_KEY_HELIUS }} \
-            --build-arg PROD_RPC_KEY_DRPC=${{ secrets.PROD_RPC_KEY_DRPC }} \
-            --build-arg GRAPH_API_KEY=${{ secrets.GRAPH_API_KEY }} \
-            --build-arg NEXT_PUBLIC_ENV=${{ github.ref_name == 'new-prod-vault' && 'prod' || 'dev' }} \
-            -t ${{ vars.IMAGE_REPOSITORY }}:${{ github.sha }}-solmate .
-          docker tag ${{ vars.IMAGE_REPOSITORY }}:${{ github.sha }}-solmate ${{ vars.IMAGE_REPOSITORY }}:latest-solmate
+          RAW_TAG=${{ steps.git_tag.outputs.tag }}
+          if [ "${{ github.ref_name }}" = "master" ]; then
+            echo "tag=$RAW_TAG" >> "$GITHUB_OUTPUT"
+          else
+            echo "tag=${RAW_TAG}-dev" >> "$GITHUB_OUTPUT"
+          fi
 
-      - name: Push Docker image to Docker Hub
+      - name: Build and push multi-platform Docker image
         run: |
-          docker push ${{ vars.IMAGE_REPOSITORY }}:${{ github.sha }}-solmate
-          docker push ${{ vars.IMAGE_REPOSITORY }}:latest-solmate
+          IMAGE="intothefathom/solana-indexer.vaults"
+          TAG="${{ steps.image_tag.outputs.tag }}"
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            -t $IMAGE:$TAG \
+            -t $IMAGE:latest \
+            --push .
 
       - name: Sync Argo CD and wait for completion
         run: |
+          APP_NAME="solana-indexer"
+          IMAGE_TAG="${{ steps.image_tag.outputs.tag }}"
           MAX_RETRIES=3
           RETRY_DELAY=10
           RETRIES=0
@@ -53,15 +61,15 @@ jobs:
               -e ARGOCD_AUTH_TOKEN=${{ secrets.ARGOCD_AUTH_TOKEN }} \
               argoproj/argocd:v2.6.15 \
               /bin/sh -c \
-              "argocd app set ${{ vars.ARGOCD_APP_NAME }} \
+              "argocd app set $APP_NAME \
               --server ${{ secrets.ARGOCD_API_URL }} \
               --grpc-web \
-              --parameter image.tag=${{ github.sha }}-solmate && \
-              argocd app wait ${{ vars.ARGOCD_APP_NAME }} \
+              --parameter image.tag=$IMAGE_TAG && \
+              argocd app wait $APP_NAME \
               --server ${{ secrets.ARGOCD_API_URL }} \
               --grpc-web \
               --operation && \
-              argocd app sync ${{ vars.ARGOCD_APP_NAME }} \
+              argocd app sync $APP_NAME \
               --server ${{ secrets.ARGOCD_API_URL }} \
               --grpc-web \
               --timeout 180" && break
